<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/linear_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/image_icon" />

    <EditText
        android:textColor="#ffffff"
        android:id="@+id/edit_text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@android:drawable/screen_background_dark_transparent"
        android:drawableStart="@drawable/ic_baseline_email"
        android:drawablePadding="8dp"
        android:hint="@string/enter_your_phone_number"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:textColorHint="#C3C1C1" />

    <EditText
        android:textColor="#ffffff"
        android:id="@+id/edit_text_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@android:drawable/screen_background_dark_transparent"
        android:drawableStart="@drawable/ic_baseline_lock"
        android:drawablePadding="8dp"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textColorHint="#C3C1C1" />

    <Button
        android:id="@+id/button_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:background="#ffffff"
        android:text="@string/sign_in"
        android:textAllCaps="false" />

    <TextView
        android:textColor="#ffffff"
        android:id="@+id/text_view_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        android:text="@string/forgot_password"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_sign_in_with_phone_number"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/custom_button_login_with_phone_number"
        android:drawableStart="@drawable/ic_baseline_phone_iphone"
        android:paddingStart="10dp"
        android:text="@string/sign_in_with_phone_number"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/button_sign_in_with_facebook_account"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/custom_button_login_with_facebook_account"
        android:paddingStart="10dp"
        android:text="@string/sign_in_with_facebook_account"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/button_sign_in_with_google_account"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/custom_button_login_with_google_account"
        android:paddingStart="10dp"
        android:text="@string/sign_in_with_google_account"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        tools:ignore="RtlSymmetry" />


</LinearLayout>