<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <LinearLayout
            android:gravity="center_vertical"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/hey_you"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_search" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/title"
            android:textColor="@color/colorText"
            android:textSize="23sp"
            android:textStyle="bold" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager_slider"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="200dp"/>
        <com.google.android.material.tabs.TabLayout
            app:tabGravity="center"
            app:tabBackground="@drawable/custom_indicator"
            app:tabIndicatorHeight="0dp"
            android:id="@+id/tab_layout_indicator"
            android:layout_width="match_parent"
            android:layout_height="30dp"/>

        <RelativeLayout
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/discover"
                android:textAlignment="textStart"
                android:textColor="#212D6F"
                android:textSize="23sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner_category"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_list_image_discover"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>

